--- a/css/popup.css
+++ b/css/popup.css
@@ -1,17 +1,15 @@
 body {
-	width: 400px;
-
-	font-size: 12px;
+	width: 500px;
+	height: 500px;
+	overflow: hidden;
 }
 
-a:link, a:visited {
-	color: red;
-}
+#main-iframe {
+	position: fixed;
+	top: 0;
+	right: 0;
 
-a:hover {
-	color: green;
-}
-
-a:active {
-	color: blue;
+	width: 100%;
+	height: 100%;
+	border: 0;
 }
